Wed Mar 27 07:07:21 CET 2013
multimedia/a52dec-0.7.4-i486-1_microlinux.txz: Added.
multimedia/a52dec-0.7.4-x86_64-1_microlinux.txz: Added.
multimedia/celt-0.11.3-i486-1_microlinux.txz: Added.
multimedia/celt-0.11.3-x86_64-1_microlinux.txz: Added.
multimedia/libmp4v2-2.0.0-i486-1_microlinux.txz: Added.
multimedia/libmp4v2-2.0.0-x86_64-1_microlinux.txz: Added.
multimedia/faac-1.28-i486-2_microlinux.txz: Added.
multimedia/faac-1.28-x86_64-2_microlinux.txz: Added.
multimedia/faad2-2.7-i486-1_microlinux.txz: Added.
multimedia/faad2-2.7-x86_64-1_microlinux.txz: Added.
+--------------------------+
Tue Mar 26 08:44:26 CET 2013
profile/user-settings-console-1.0-noarch-2_microlinux.txz: Added.
ap/sbopkg-0.36.0-noarch-1_microlinux.txz: Added.
ap/recode-3.6-i486-2_microlinux.txz: Added.
ap/recode-3.6-x86_64-2_microlinux.txz: Added.
ap/unrar-4.0.7-i486-1_microlinux.txz: Added.
ap/unrar-4.0.7-x86_64-1_microlinux.txz: Added.
ap/p7zip-9.20.1-i486-1_microlinux.txz: Added.
hplip-3.12.11-i486-1_microlinux.txz: Upgraded.
hplip-3.12.11-x86_64-1_microlinux.txz: Upgraded.
  Fix for broken 'hp-toolbox' utility.
+--------------------------+