@@ -1,0 +1,18 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|' on
+# the right side marks the last column you can put a character in.  You must make
+# exactly 11 lines for the formatting to be correct.  It's also customary to
+# leave one space after the ':'.
+     |-----handy-ruler------------------------------------------------------|
+jdk: Java(TM) 2 Platform Standard Edition Development Kit.
+jdk:
+jdk: The Java 2 SDK software includes tools for developing, testing, and
+jdk: running programs written in the Java programming language.  This
+jdk: package contains everything you need to run Java(TM).
+jdk:
+jdk: For additional information, refer to this web page:
+jdk:   http://java.com/
+jdk:
+jdk:
+jdk:
