@@ -1,0 +1,12 @@
+      |-----handy-ruler------------------------------------------------------|
+libass: libass  (Subtitle renderer for the ASS/SSA)
+libass:
+libass: libass is a portable subtitle renderer for the ASS/SSA (Advanced
+libass: Substation Alpha/Substation Alpha) subtitle format. It is mostly
+libass: compatible with VSFilter.
+libass:
+libass: 
+libass:
+libass:
+libass:
+libass: Package created by Niki Kovacs <info@microlinux.fr>
