@@ -9,6 +9,8 @@ multimedia/faac-1.28-i486-2_microlinux.txz: Added.
 multimedia/faac-1.28-x86_64-2_microlinux.txz: Added.
 multimedia/faad2-2.7-i486-1_microlinux.txz: Added.
 multimedia/faad2-2.7-x86_64-1_microlinux.txz: Added.
+multimedia/libass-0.10.1-i486-1_microlinux.txz: Added.
+d/jdk-7u10-i586-1_microlinux.txz: Added.
 +--------------------------+
 Tue Mar 26 08:44:26 CET 2013
 profile/user-settings-console-1.0-noarch-2_microlinux.txz: Added.
